<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="leap.droidcord.LoginActivity" >

    <LinearLayout
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:text="@string/proxy_warning"
            android:textAppearance="?android:attr/textAppearance" />

        <EditText
            android:id="@+id/api_url"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/api_url"
            android:inputType="textUri"
            android:maxLines="1"
            android:singleLine="true"
            android:text="@string/api_url_default" />

        <EditText
            android:id="@+id/cdn_url"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/cdn_url"
            android:inputType="textUri"
            android:maxLines="1"
            android:singleLine="true"
            android:text="@string/cdn_url_default" />

        <CheckBox
            android:id="@+id/use_gateway"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/use_gateway" />

        <EditText
            android:id="@+id/gateway_url"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:hint="@string/gateway_url"
            android:inputType="textUri"
            android:maxLines="1"
            android:singleLine="true"
            android:text="@string/gateway_url_default" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:text="@string/token_info"
            android:textAppearance="?android:attr/textAppearance" />

        <EditText
            android:id="@+id/token"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/token"
            android:inputType="textPassword"
            android:maxLines="1"
            android:password="true"
            android:singleLine="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:text="@string/send_token_as"
            android:textAppearance="?android:attr/textAppearance" />

        <Spinner
            android:id="@+id/send_token_as"
            style="?android:attr/textAppearanceMediumInverse"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login" />
    </LinearLayout>

</ScrollView>